objects/Account.object
<CustomObject>
    <fields>
        <fullName>BillingEmail__c</fullName>
        <label>BillingEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Premium</fullName>
                    <default>true</default>
                    <label>PREMIUM</label>
                </value>
                <value>
                    <fullName>Standard</fullName>
                    <label>STANDARD</label>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <label>NORMAL</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Codice_Operatore__c</fullName>
        <label>Codice Operatore</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Comune__c</fullName>
        <label>Comune</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Id_Building__c</fullName>
        <label>Id Building</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Indirizzo__c</fullName>
        <label>Indirizzo</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Numero_Civico__c</fullName>
        <label>Numero Civico</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Particella_Toponomastica__c</fullName>
        <label>Particella Toponomastica</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Phone_2__c</fullName>
        <label>Phone 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Provincia__c</fullName>
        <label>Provincia</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Scala_Palazzina__c</fullName>
        <label>Scala Palazzina</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_BillingSyncronized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Serve per segnalare che c&apos;è stata almeno una sincronizzazione con il billing</description>
        <label>OF_BillingSyncronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PEC__c</fullName>
        <label>PEC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bozza</fullName>
                </value>
                <value>
                    <fullName>Attivo</fullName>
                </value>
                <value>
                    <fullName>Non Attivo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SyncBilling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SyncBilling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaxationCode__c</fullName>
        <label>TaxationCode</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VATNumber__c</fullName>
        <label>VATNumber</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <role>BO_Analisi</role>
            <role>BO_Collaudo</role>
            <role>BO_OnField</role>
            <role>CQS_Responsabile_Lavori_Nord</role>
            <role>CQS_Responsabile_Lavori_Sud</role>
            <role>CQS_Responsabile_Territoriale_Centro</role>
            <role>CQS_Responsabile_Territoriale_Nord</role>
            <role>CQS_Responsabile_Territoriale_Sud</role>
            <role>Direzione</role>
            <role>OF_CQS_Responsabile_Lavori_Centro</role>
            <role>Responsabile_BO</role>
            <role>Responsabile_TTM</role>
            <role>Responsabile_Tecnico</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
        <sharedTo>
            <role>BO_Analisi</role>
            <role>BO_Collaudo</role>
            <role>BO_OnField</role>
            <role>CQS_Responsabile_Lavori_Nord</role>
            <role>CQS_Responsabile_Lavori_Sud</role>
            <role>CQS_Responsabile_Territoriale_Centro</role>
            <role>CQS_Responsabile_Territoriale_Nord</role>
            <role>CQS_Responsabile_Territoriale_Sud</role>
            <role>Direzione</role>
            <role>OF_CQS_Responsabile_Lavori_Centro</role>
            <role>Operatore_BO</role>
            <role>Operatore_OM</role>
            <role>Operatore_Tecnico</role>
            <role>Responsabile_BO</role>
            <role>Responsabile_TTM</role>
            <role>Responsabile_Tecnico</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OLO</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>EOF_Codice_Operatore__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.OLO</value>
        </filters>
        <label>OLO</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Cliente_Business</fullName>
        <active>true</active>
        <description>Use this account to store Customer information.</description>
        <label>Cliente Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>OLO</fullName>
        <active>true</active>
        <description>Use this account to store OLO information.</description>
        <label>OLO</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>WS_Codice_Operatore_Obbligatorio</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.DeveloperName = &apos;OLO&apos;, ISBLANK(  EOF_Codice_Operatore__c  ))</errorConditionFormula>
        <errorDisplayField>EOF_Codice_Operatore__c</errorDisplayField>
        <errorMessage>Compilare il campo</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WS_Phone_Obbligatorio</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Phone)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Compilare il campo</errorMessage>
    </validationRules>
</CustomObject>